info divs: wrapped the div contents in row and column containers to ensure they are fluid when viewed on multiple devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,9 @@
 
 */
 
+html {
+  scroll-behavior: smooth;
+}
 
 
 /* body */
@@ -19,6 +22,9 @@
     font-family: 'pompiere', sans-serif;
     color: #4a4238ff;
 }
+
+/* nav */
+
 
 /* Main title */
 
@@ -77,6 +83,10 @@ Footer */
 
 .hideme {
     display: none !important;
+}
+
+.infoheader {
+    text-align: center;
 }
 
 /* form */
